--- a/sample_data/set_up_all.ipynb
+++ b/sample_data/set_up_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "6c6f1a77",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d3b18f46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1c40611",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "8d5a07f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load(\"connect.py\")\n",
+    "load(\"setup_tables/citations_setup.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac30e5b2",
    "metadata": {},
    "outputs": [],
    "source": []
