add_citations_NF function
add citations to a number field function entry

--- a/sample_data/functions_test.ipynb
+++ b/sample_data/functions_test.ipynb
@@ -52,6 +52,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56d4c734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_citations_NF('1.2.0b88e8b9.1', [2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "367ef789",
    "metadata": {
     "scrolled": true
@@ -59,6 +69,31 @@
    "outputs": [],
    "source": [
     "load(\"sample_data/add_functions_dim_1.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d40c37dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted(list(set([1,4,5]+[2,4,6])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82450917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_cursor.execute(\"\"\"SELECT\n",
+    "        label\n",
+    "         FROM functions_dim_1_NF\n",
+    "        WHERE label=%s\n",
+    "        \"\"\",['1.2.0b88e8b9.1'])\n",
+    "my_cursor.fetchone()['label']"
    ]
   },
   {
@@ -76,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c79d276",
+   "id": "a23e1253",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6c6f294",
+   "id": "873351cd",
    "metadata": {},
    "outputs": [],
    "source": [
