--- a/sample_data/set_up_all.ipynb
+++ b/sample_data/set_up_all.ipynb
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14515b2b",
+   "id": "e49eaa7d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -41,26 +41,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a541d45c",
+   "id": "6a9867de",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8d5a07f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "load(\"connect.py\")\n",
-    "load(\"setup_tables/citations_setup.py\")"
+    "function_label_length= int(25)\n",
+    "field_label_length= int(15)\n",
+    "load(\"setup_tables/families_dim_1_setup.py\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a31fdce",
+   "id": "74887f62",
    "metadata": {},
    "outputs": [],
    "source": []
