update for repository name change

--- a/sample_data/fields_test.ipynb
+++ b/sample_data/fields_test.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "da562723",
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_attach_path('/home/ben/Database/')"
+    "load_attach_path('/home/ben/DynaBase/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c5d3a59f",
    "metadata": {},
    "outputs": [],
@@ -23,175 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "420c2cd4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['3.1.3159.1']\n",
-      "['3.1.972.1']\n",
-      "['3.1.1228.1']\n",
-      "['3.1.1836.1']\n",
-      "['3.1.1228.1']\n",
-      "['3.1.1228.2']\n",
-      "['3.1.2075.1']\n",
-      "['3.1.2075.1']\n",
-      "['3.1.2075.2']\n",
-      "Adding field: Finite Field of size 2:Field not Found: Finite Field of size 2\n",
-      "label computed: 2.1\n",
-      "field inserted as: 2.1\n",
-      "Adding field: Finite Field in z2 of size 2^2:Normalized field variable:Finite Field in z2 of size 2^2 to Finite Field in a of size 2^2\n",
-      "Field not Found: Finite Field in a of size 2^2\n",
-      "label computed: 2.2\n",
-      "field inserted as: 2.2\n",
-      "Adding field: Finite Field in z3 of size 2^3:Normalized field variable:Finite Field in z3 of size 2^3 to Finite Field in a of size 2^3\n",
-      "Field not Found: Finite Field in a of size 2^3\n",
-      "label computed: 2.3\n",
-      "field inserted as: 2.3\n",
-      "Adding field: Finite Field in z4 of size 2^4:Normalized field variable:Finite Field in z4 of size 2^4 to Finite Field in a of size 2^4\n",
-      "Field not Found: Finite Field in a of size 2^4\n",
-      "label computed: 2.4\n",
-      "field inserted as: 2.4\n",
-      "Adding field: Finite Field of size 3:Field not Found: Finite Field of size 3\n",
-      "label computed: 3.1\n",
-      "field inserted as: 3.1\n",
-      "Adding field: Finite Field in z2 of size 3^2:Normalized field variable:Finite Field in z2 of size 3^2 to Finite Field in a of size 3^2\n",
-      "Field not Found: Finite Field in a of size 3^2\n",
-      "label computed: 3.2\n",
-      "field inserted as: 3.2\n",
-      "Adding field: Finite Field in z3 of size 3^3:Normalized field variable:Finite Field in z3 of size 3^3 to Finite Field in a of size 3^3\n",
-      "Field not Found: Finite Field in a of size 3^3\n",
-      "label computed: 3.3\n",
-      "field inserted as: 3.3\n",
-      "Adding field: Finite Field in z4 of size 3^4:Normalized field variable:Finite Field in z4 of size 3^4 to Finite Field in a of size 3^4\n",
-      "Field not Found: Finite Field in a of size 3^4\n",
-      "label computed: 3.4\n",
-      "field inserted as: 3.4\n",
-      "Adding field: Finite Field of size 5:Field not Found: Finite Field of size 5\n",
-      "label computed: 5.1\n",
-      "field inserted as: 5.1\n",
-      "Adding field: Finite Field in z2 of size 5^2:Normalized field variable:Finite Field in z2 of size 5^2 to Finite Field in a of size 5^2\n",
-      "Field not Found: Finite Field in a of size 5^2\n",
-      "label computed: 5.2\n",
-      "field inserted as: 5.2\n",
-      "Adding field: Finite Field in z3 of size 5^3:Normalized field variable:Finite Field in z3 of size 5^3 to Finite Field in a of size 5^3\n",
-      "Field not Found: Finite Field in a of size 5^3\n",
-      "label computed: 5.3\n",
-      "field inserted as: 5.3\n",
-      "Adding field: Finite Field in z4 of size 5^4:Normalized field variable:Finite Field in z4 of size 5^4 to Finite Field in a of size 5^4\n",
-      "Field not Found: Finite Field in a of size 5^4\n",
-      "label computed: 5.4\n",
-      "field inserted as: 5.4\n",
-      "Adding field: Finite Field of size 7:Field not Found: Finite Field of size 7\n",
-      "label computed: 7.1\n",
-      "field inserted as: 7.1\n",
-      "Adding field: Finite Field in z2 of size 7^2:Normalized field variable:Finite Field in z2 of size 7^2 to Finite Field in a of size 7^2\n",
-      "Field not Found: Finite Field in a of size 7^2\n",
-      "label computed: 7.2\n",
-      "field inserted as: 7.2\n",
-      "Adding field: Finite Field in z3 of size 7^3:Normalized field variable:Finite Field in z3 of size 7^3 to Finite Field in a of size 7^3\n",
-      "Field not Found: Finite Field in a of size 7^3\n",
-      "label computed: 7.3\n",
-      "field inserted as: 7.3\n",
-      "Adding field: Finite Field in z4 of size 7^4:Normalized field variable:Finite Field in z4 of size 7^4 to Finite Field in a of size 7^4\n",
-      "Field not Found: Finite Field in a of size 7^4\n",
-      "label computed: 7.4\n",
-      "field inserted as: 7.4\n",
-      "Adding field: Finite Field of size 11:Field not Found: Finite Field of size 11\n",
-      "label computed: 11.1\n",
-      "field inserted as: 11.1\n",
-      "Adding field: Finite Field in z2 of size 11^2:Normalized field variable:Finite Field in z2 of size 11^2 to Finite Field in a of size 11^2\n",
-      "Field not Found: Finite Field in a of size 11^2\n",
-      "label computed: 11.2\n",
-      "field inserted as: 11.2\n",
-      "Adding field: Finite Field in z3 of size 11^3:Normalized field variable:Finite Field in z3 of size 11^3 to Finite Field in a of size 11^3\n",
-      "Field not Found: Finite Field in a of size 11^3\n",
-      "label computed: 11.3\n",
-      "field inserted as: 11.3\n",
-      "Adding field: Finite Field in z4 of size 11^4:Normalized field variable:Finite Field in z4 of size 11^4 to Finite Field in a of size 11^4\n",
-      "Field not Found: Finite Field in a of size 11^4\n",
-      "label computed: 11.4\n",
-      "field inserted as: 11.4\n",
-      "Adding field: Finite Field of size 13:Field not Found: Finite Field of size 13\n",
-      "label computed: 13.1\n",
-      "field inserted as: 13.1\n",
-      "Adding field: Finite Field in z2 of size 13^2:Normalized field variable:Finite Field in z2 of size 13^2 to Finite Field in a of size 13^2\n",
-      "Field not Found: Finite Field in a of size 13^2\n",
-      "label computed: 13.2\n",
-      "field inserted as: 13.2\n",
-      "Adding field: Finite Field in z3 of size 13^3:Normalized field variable:Finite Field in z3 of size 13^3 to Finite Field in a of size 13^3\n",
-      "Field not Found: Finite Field in a of size 13^3\n",
-      "label computed: 13.3\n",
-      "field inserted as: 13.3\n",
-      "Adding field: Finite Field in z4 of size 13^4:Normalized field variable:Finite Field in z4 of size 13^4 to Finite Field in a of size 13^4\n",
-      "Field not Found: Finite Field in a of size 13^4\n",
-      "label computed: 13.4\n",
-      "field inserted as: 13.4\n",
-      "Adding field: Finite Field of size 17:Field not Found: Finite Field of size 17\n",
-      "label computed: 17.1\n",
-      "field inserted as: 17.1\n",
-      "Adding field: Finite Field in z2 of size 17^2:Normalized field variable:Finite Field in z2 of size 17^2 to Finite Field in a of size 17^2\n",
-      "Field not Found: Finite Field in a of size 17^2\n",
-      "label computed: 17.2\n",
-      "field inserted as: 17.2\n",
-      "Adding field: Finite Field in z3 of size 17^3:Normalized field variable:Finite Field in z3 of size 17^3 to Finite Field in a of size 17^3\n",
-      "Field not Found: Finite Field in a of size 17^3\n",
-      "label computed: 17.3\n",
-      "field inserted as: 17.3\n",
-      "Adding field: Finite Field in z4 of size 17^4:Normalized field variable:Finite Field in z4 of size 17^4 to Finite Field in a of size 17^4\n",
-      "Field not Found: Finite Field in a of size 17^4\n",
-      "label computed: 17.4\n",
-      "field inserted as: 17.4\n",
-      "Adding field: Finite Field of size 19:Field not Found: Finite Field of size 19\n",
-      "label computed: 19.1\n",
-      "field inserted as: 19.1\n",
-      "Adding field: Finite Field in z2 of size 19^2:Normalized field variable:Finite Field in z2 of size 19^2 to Finite Field in a of size 19^2\n",
-      "Field not Found: Finite Field in a of size 19^2\n",
-      "label computed: 19.2\n",
-      "field inserted as: 19.2\n",
-      "Adding field: Finite Field in z3 of size 19^3:Normalized field variable:Finite Field in z3 of size 19^3 to Finite Field in a of size 19^3\n",
-      "Field not Found: Finite Field in a of size 19^3\n",
-      "label computed: 19.3\n",
-      "field inserted as: 19.3\n",
-      "Adding field: Finite Field in z4 of size 19^4:Normalized field variable:Finite Field in z4 of size 19^4 to Finite Field in a of size 19^4\n",
-      "Field not Found: Finite Field in a of size 19^4\n",
-      "label computed: 19.4\n",
-      "field inserted as: 19.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load(\"sample_data/add_fields.py\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "006085b0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "InterfaceError",
-     "evalue": "connection already closed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInterfaceError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmy_session\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mInterfaceError\u001b[0m: connection already closed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_session.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "8db701b8",
    "metadata": {},
    "outputs": [],
@@ -209,21 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "53423035",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "679"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_cursor.execute(\"\"\"SELECT * FROM number_fields\"\"\")\n",
     "my_cursor.rowcount"
@@ -231,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "6591c028",
    "metadata": {},
    "outputs": [],
@@ -253,42 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "83914f59",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_cursor.rowcount"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "1295525f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "34"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_cursor.execute(\"\"\"SELECT * FROM number_fields\n",
     "    WHERE label LIKE '2.0.1%'\n",
@@ -298,21 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "eae3951e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "K=QuadraticField(2)\n",
     "label = str(K.degree()) + '.' + str(K.signature()[0]) + '.' + str(K.discriminant().abs()) + '.%'\n",
@@ -324,21 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "da97c094",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "K.<v>=QuadraticField(-103)\n",
     "K.class_number()"
@@ -364,21 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "9fb38995",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Rational Field"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "D={'field_label':'2.2.24.1'}\n",
     "my_cursor.execute(\"\"\"SELECT * FROM finite_fields WHERE label=%(field_label)s\"\"\",D)\n",
@@ -390,21 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2daaf894",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "x^2 - x - 1"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def_poly = K.defining_polynomial()\n",
     "def_poly_new, gen = pari(def_poly).polredabs(1)\n",
@@ -413,19 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "eb878959",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "[['1.1.1.1', 1, [0, 1], '(1,0)', 1, 1, 1], ['2.2.8.1', 2, [-2, 0, 1], '(2,0)', 8, 1, 8], ['2.2.12.1', 2, [-3, 0, 1], '(2,0)', 12, 1, 12], ['2.2.5.1', 2, [-1, -1, 1], '(2,0)', 5, 1, 5], ['2.2.24.1', 2, [-6, 0, 1], '(2,0)', 24, 1, 24]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(my_cursor.description)\n",
     "my_cursor.execute(\"\"\"SELECT * FROM number_fields\"\"\")\n",
@@ -434,23 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "8379057a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Column(name='label', type_code=1043), Column(name='degree', type_code=23), Column(name='defn_poly_coeffs', type_code=1007), Column(name='signature', type_code=600), Column(name='conductor', type_code=23), Column(name='discriminant', type_code=23), Column(name='class_number', type_code=23))\n",
-      "1.1.1.1\n",
-      "2.2.8.1\n",
-      "2.2.12.1\n",
-      "2.2.5.1\n",
-      "2.2.24.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(my_cursor.description)\n",
     "my_cursor.execute(\"\"\"SELECT * FROM number_fields\"\"\")\n",
@@ -460,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0418781c",
    "metadata": {},
    "outputs": [],
@@ -470,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "40dc783a",
    "metadata": {},
    "outputs": [],
@@ -503,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
