--- a/sample_data/functions_test.ipynb
+++ b/sample_data/functions_test.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_attach_path('/home/ben/Database/')"
+    "load_attach_path('/home/ben/DynaBase/')"
    ]
   },
   {
@@ -46,6 +46,24 @@
     "load(\"functions/function_dim_1_helpers_NF.py\")\n",
     "load(\"functions/families_dim_1_helpers_NF.py\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36ac3914",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load(\"sample_data/add_functions_dim_1.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa797d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -83,9 +101,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "load(\"sample_data/add_functions_dim_1.py\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -852,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
