made python modules
made each directory a python module
everything is now done with 'import' rather than 'load'
made the neccesary changes to generate sample data
switch field_helpers_FF to unix line endings
added a .gitignore file

--- a/sample_data/families_test.ipynb
+++ b/sample_data/families_test.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_attach_path('/home/ben/Database/')"
+    "load_attach_path('/home/ben/DynaBase/')\n",
+    "import sys\n",
+    "sys.path.append(\"/home/ben/DynaBase\")"
    ]
   },
   {
@@ -17,8 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load(\"fields/field_helpers_NF.py\")\n",
-    "load(\"functions/families_dim_1_helpers_NF.py\")"
+    "#load(\"fields/field_helpers_NF.py\")\n",
+    "#load(\"functions/families_dim_1_helpers_NF.py\")"
    ]
   },
   {
@@ -52,6 +54,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "07356301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import_statements('ConwayPolynomials')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "48d0d0d3",
    "metadata": {},
    "outputs": [],
@@ -59,7 +71,7 @@
     "R.<c>=QQ[]\n",
     "P.<x,y>=ProjectiveSpace(R,1)\n",
     "F=DynamicalSystem([x^2+c*y^2,y^2])\n",
-    "add_family_NF(F, is_poly=True, is_Newton=False, is_Lattes=False, num_crit=2, num_aut=1)"
+    "add_family_NF(F, my_cursor, is_poly=True, is_Newton=False, is_Lattes=False, num_crit=2, num_aut=1)"
    ]
   },
   {
