--- a/sample_data/fields_test.ipynb
+++ b/sample_data/fields_test.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_attach_path('/home/ben/DynaBase/')"
+    "load_attach_path('/home/ben/DynaBase/')\n",
+    "import sys\n",
+    "sys.path.append(\"/home/ben/DynaBase\")"
    ]
   },
   {
@@ -17,8 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load(\"fields/field_helpers_NF.py\")\n",
-    "load(\"fields/field_helpers_FF.py\")"
+    "#load(\"fields/field_helpers_NF.py\")\n",
+    "#load(\"fields/field_helpers_FF.py\")"
    ]
   },
   {
