--- a/sample_data/functions_test.ipynb
+++ b/sample_data/functions_test.ipynb
@@ -32,7 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_attach_path('/home/ben/DynaBase/')"
+    "load_attach_path('/home/ben/DynaBase/')\n",
+    "import sys\n",
+    "sys.path.append(\"/home/ben/DynaBase\")"
    ]
   },
   {
@@ -42,9 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load(\"fields/field_helpers_NF.py\")\n",
-    "load(\"functions/function_dim_1_helpers_NF.py\")\n",
-    "load(\"functions/families_dim_1_helpers_NF.py\")"
+    "#load(\"fields/field_helpers_NF.py\")\n",
+    "#load(\"functions/function_dim_1_helpers_NF.py\")\n",
+    "#load(\"functions/families_dim_1_helpers_NF.py\")"
    ]
   },
   {
@@ -79,6 +81,7 @@
     "            user=\"dad_user\",\n",
     "            password=\"dad_pass\",\n",
     "            port=\"5432\")\n",
+    "\n",
     "    \n",
     "my_cursor = my_session.cursor(cursor_factory=psycopg2.extras.DictCursor)"
    ]
@@ -86,22 +89,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56d4c734",
-   "metadata": {},
+   "id": "367ef789",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "#add_citations_NF('1.2.0b88e8b9.1', [2])"
+    "load(\"sample_data/add_functions_dim_1.py\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "367ef789",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "b936d46d",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import_statements('copy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b33ebbbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/home/ben/DynaBase\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -110,10 +126,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functions.function_dim_1_helpers_NF import add_function_all_NF\n",
     "K.<a>=QuadraticField(3)\n",
     "P.<x,y>=ProjectiveSpace(QQ,1)\n",
     "f=DynamicalSystem([x^2+a*y^2,y^2])\n",
-    "add_function_all_NF(f)"
+    "add_function_all_NF(f, my_cursor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58d8ff00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FunctionFields??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec65497f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import_statements('FractionField')"
    ]
   },
   {
@@ -183,9 +220,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functions.function_dim_1_helpers_NF import model_in_database_NF, add_function_all_NF\n",
     "P=ProjectiveSpace(QQ,1,'x,y')\n",
     "x,y = P.gens()\n",
-    "for c in QQ.range_by_height(8):\n",
+    "for c in QQ.range_by_height(2):\n",
     "    F=DynamicalSystem([x**2+c*y**2,y**2]) #polys\n",
     "    if not model_in_database_NF(F)[0]:\n",
     "        label = add_function_all_NF(F)"
